lab1/Test/L1-A-12-13.output
Error Type A at Line 9
Error Type B at Line 38
Error Type A at Line 53
Error Type A at Line 58
Error Type A at Line 62
