lab1/Test/L1-A-12-13.cmm
float ;
struct xlcbz_BEao5caU t_zW8TyElgxvMqg ( ) {
  int k_HUVLzqq_Be ;
  gyy0byy9lwNHC = DrDkRDX && RI9ov0MJTJG != M4cYo0rjSRr 
    + _0E53Ajc ( D , cq7aTel7Rd || mPxFkxuWyblj4 > tiSukqqSY4_Tsg 
    [ BPlIxOCGBYXF4 = YZwFM01FFTGs3dNZjZ9r || Q4H4Sq1oz 
    <= ! - - ( nVD4UGt == BZ15MpUeH0f9 / ( XLyp8M >= ( 
    ZGUotsAQ < ( nCYGS7nWIa && A2opaBlNjh7gCecyo9 ) ) 
    ) ) ^/ aGUEEH_ . HA8Yw7ZKj2FA9I1_z9X0 - 373622354.987345472 
    . pXGwNrxL9UXH ] * - Q ( ) ) / ! - 127654549 ;
}
int NdlmJG_KtV_ACn4qhcpi [ 970631943 ] 
;
struct {
  struct Fmywa U8evG_YiPNykLMe , DNQLjnk8nq1yhXmRh5oM 
    = mMk ;
};
struct hAYEQAO0ncm5 ;
int ;
struct Fs8coVRlb uwlaS7_mcbcFop27cvh , qLRg1dAAB9HVuq 

;
int ;
int Zpb3K ( struct r23D3BaypLSUZ {
  int OVplKr3 ;
}ROUUqgW ) {
  struct k6dTwbOW8dOTVF zzEWRG48MYxKF ;
  int foCGB ;
  int Ta6zwACU5QoBm ;
  if ( spgqOuJ )   return QqvcnuwPgl7UV0 ;

}
int ;
int ;
int ;
int ;
int 
int qXUz0icKZDrDhaTHK ( ) {
}
int ;
int QxCQF7QZmA ( int O , int OdhNkGatqXVFQOzIal9 ) 
  {
}
int ;
int ;
int ;
int ;
int ;
int ;
int QD7aX0Feu ( ) {
  MEfzIb9B_QnQzzafFdvG ;
  if ( UVab6tgSQjs4fBs2 )   rnLi ;
else   if ( Btu6Ao_RYCx )   A5JMqr0lekkXgKVXa ^;


  if ( V2GcUvfI )   while ( bUGUGLrTCPCWGPUNhb )   w_V 
    ;
$
else {
  }
}
^